# glooten

./: Cargo.toml  build.rs  rustfmt.toml
shader/: char.f.glsl  char.v.glsl  tri.f.glsl
src/: main.rs  shader.rs
