[package]
name = "glooten"
version = "0.1.0"
authors = ["_Bare <bare@logixsr.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
# anyhow = "1.0.40"
crossfont = "0.3.0"
glutin = "0.26.0"
unicode-width = "0.1.8"
