[package]
name = "glooten"
version = "0.1.0"
authors = ["_Bare <bare@logixsr.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
freetype-rs = "0.28.0"
glutin = "0.26.0"
nalgebra-glm = "0.12.0"
